# tick-sample

./: .gitignore  DEERTICK.md  README.md  SECURITY.md  main.py  pyproject.toml
backend/: .env.template  benchmark.py  config.yaml  discord_bridge.py  extensions_config.json  pyproject.toml
backend/src/: client.py  deer_tick_client.py  webhook_server.py
backend/src/agents/lead_agent/: agent.py  prompt.py
backend/src/agents/middlewares/: clarification_middleware.py  memory_middleware.py  title_middleware.py
backend/src/agents/trading/: graph.py  prompts.py  state.py
backend/src/agents/trading/nodes/: analysts.py  debate.py  execution.py  hydrate.py  hydrate_v2.py  planner.py  planner_v2.py
backend/src/arb/: arb_scanner.py  arb_tools.py
backend/src/backtest/: walk_forward.py
backend/src/channels/: __init__.py  direct_dispatcher.py  discord_channel.py  store.py
backend/src/config/: app_config.py
backend/src/data/: cache.py  ws_ohlcv.py
backend/src/features/: alpha_factors.py
backend/src/forecasting/: arima_garch.py  kalman.py
backend/src/hitl/: gate.py
backend/src/intelligence/: market_intelligence.py
backend/src/regime/: hmm.py
backend/src/risk/: engine.py
backend/src/sandbox/local/: local_sandbox.py
backend/src/scheduler/: alert_scheduler.py  quant_memory.py  quant_memory_v2.py
backend/src/signals/: signal_engine.py
backend/src/subagents/: executor.py
backend/src/tools/: alpaca_tools.py  coinbase_tools.py  robinhood_tools.py  strategy_tools.py  tools.py
backend/src/tools/builtins/: __init__.py
backend/tests/: test_core_modules.py
backend/tests/agents/middlewares/: test_subagent_limit_middleware.py
backend/tests/subagents/: test_executor.py
tests/agents/middlewares/: test_dangling_tool_call_middleware.py  test_title_middleware.py  test_todo_middleware.py
